# gotta-watch-em-all

./: Cargo.toml  README.md  release.toml
.github/: merge.yml  release-pr.yml  release.pub
.github/workflows/: merge.yml  release-cli.yml
crates/cli/: Cargo.toml  build.rs  gotta-watch-em-all-manifest.rc  gotta-watch-em-all.exe.manifest  release.toml
crates/cli/src/: main.rs
src/: main.rs
