[package]
name = "gotta-watch-em-all"
version = "0.1.1"
edition = "2021"
description = "A process tree memory monitor"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
structopt = { version = "0.3.26", features = ["paw"] }
sysinfo = "0.23.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.6.9"
