[package]
name = "gotta-watch-em-all"
version = "0.2.2"

authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
license = "Apache-2.0"
description = "A process tree memory monitor"
keywords = ["cli", "process", "monitor"]
categories = ["command-line-utilities"]
repository = "https://github.com/aaronfriel/gotta-watch-em-all"

edition = "2021"

[dependencies]
cfg-if = "1.0.0"
futures = "0.3.19"
libc = "0.2.113"
structopt = { version = "0.3.26", features = ["paw"] }
sysinfo = "0.23.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.6.9"

[build-dependencies]
embed-resource = "1.6.1"
